Rental/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rental
  namespace: rentbook
  labels:
    app: rental
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: rental
