Rental/kubernetes/rental-istio.yaml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-rental-network-rule
    namespace: rentbook
  spec:
    hosts:
    - Rental
    http:
    - route:
      - destination:
          host: Rental
      timeout: 1s
